--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ nav{
 	width:100%;
 }
 nav div.left{
-	margin:0 0 0 120px;
+	
 	padding-top:20px;
 	display:inline-block;
 	
@@ -68,7 +68,8 @@ nav .right li a{
 
 }
 .input{
-	float:right;
+	position:absolute;
+	left:70%;
 	padding-right:30px;
 
 }
@@ -82,22 +83,19 @@ nav .right li a{
 	
 }
 
+
 .orange{
 	display:inline-block;
 	margin-top:150px;
-	width:40%;
+	width:30%;
 
 
 }
 .property{
 	display:inline-block;
-	float:right;
+	margin-left:25%;
 	height:200px;
-	width:50%;
-	position:absolute;
-	top:300px;
-	left:450px;
-	margin-left:30px;
+	width:40%;
 
 }
 .property p button{
@@ -149,6 +147,82 @@ footer {
 	background-color:#7accc8;
 	height:90px;
 	margin-top:112px;
+	width:100%;
+}
+@media (max-width: 955px) {
+	nav {
+		height:150px;
+	}
+	.right{
+		margin:0 auto;
+		width:100%;
+		text-align: center
+	}
+	.left{
+		width:100%;
+		margin:0 auto;
+		text-align:center;
+	}
+	
+	.property p{
+		font-size:25px;
+	}
+	.property button{
+		padding:10px 30px;
+		font-size:10px;
+	}
+	.input input{
+		height:25px;
+		width:50px;
+	}
+	.input img{
+		height:12px;
+	}
 }
 
+@media (min-width: 955px) {
+	.left{
+		margin-left:120px;
+	}
+}
+@media (max-width:810px) {
+	
+	.dodo {
+		text-align: center
+	}
+	.orange{
+		width:100%;
+		margin-top:30px;
+	}
+	.orange img{
+		
+		width:150px;
+		height:100px;
+	}
+	.property{
+		margin:0 auto;
+
+	}
+	.property p{
+		font-size:18px;
+	}
+	.property button{
+		margin-top:10%;
+	}
+	span.ori, nav span {
+		font-size:25px;
+	}
+	nav .left img{
+	height:20px;
+	width:40px;
+	}
+	nav .right li{
+		font-size:small;
+		padding-right:5px;
+	}
+	footer{
+		margin-top:50px;
+		height:95px;
+	}
+}
 
